build: add permissions request to backmerge action

--- a/.github/workflows/backmerge.yml
+++ b/.github/workflows/backmerge.yml
@@ -9,6 +9,7 @@ jobs:
   run:
     name: Backmerge into development
     runs-on: ubuntu-latest
+    permissions: write-all
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
